infra/k8s/client-gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-gateway
  template:
    metadata:
      labels:
        app: client-gateway
    spec:
      containers:
        - name: client-gateway
          image: ticketing-v4-client-gateway-js:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /health
              port: 3000
            periodSeconds: 5
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: client-gateway-srv
spec:
  selector:
    app: client-gateway
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
